@@ -11,6 +11,7 @@
 - 3rd time derivative computed on potential (instead of hwater) to avoid
 instabilities when hwater tends to 0
 - fix retard coefficient for unsaturated (depends on saturation flow)
+- handle correctly dry cells for stationaryGroundwater2DFoam solver
 
 ************************
 *** PMFv1912
